--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,27 @@
-node_modules
-dist
+cat > .gitignore << 'EOF'
+# Node
+node_modules/
+npm-debug.log*
+pnpm-lock.yaml
+yarn.lock
+
+# Build output
+dist/
+dist-server/
+*.log
+
+# Env / secrets
+.env
+.env.*
+!.env.example
+
+# OS
 .DS_Store
-server/public
-vite.config.ts.*
-*.tar.gz
+
+# IDE
+.vscode/
+.idea/
+
+# Netlify
+.netlify/
+EOF
